# extension-manager

./: .gitattributes  .gitignore  .golangci.yml  .project-keeper.yml  README.md  SECURITY.md  dependencies.md  design.html  error_code_config.yml  go-generate.go  go.mod  go.sum  main.go  pom.xml  sonar-project.properties  system_requirements.html
.github/: dependabot.yml
apiErrors/: errors.go  errors_test.go
backend/: ExasolSqlClient.go  ExasolSqlClient_i_test.go  ExasolSqlClient_test.go  go-generate.go  go.mod  go.sum  sonar-project.properties
backend-java/: pk_generated_parent.pom  pom.xml
ci/: install_and_run_golangci-lint.sh  project-keeper.sh  trace-requirements.sh
cmd/: main.go  main_test.go  manual_i_test.go
doc/: design.md  developer_guide.md  developers_guide.md  embedding_extension_manager.md  extension_developer_guide.md  system_requirements.md
extension-manager-client-java/: error_code_config.yml  pk_generated_parent.pom  pom.xml
extension-manager-integration-test-java/: error_code_config.yml  pk_generated_parent.pom  pom.xml
extension-parameter-validator/: .gitignore  jest.config.ts  package-lock.json  package.json  tsconfig.json
extensionAPI/: ExaAllScriptTable.go  ExaAllScriptTable_test.go  ExaMetadata.go  ExaMetadata_test.go  context.go  errorHandlingExtension.go  errorHandlingExtension_test.go  extensionApi.go  extensionApi_test.go
extensionController/: BucketFsApi.go  BucketFsApi_test.go  ExtensionFinder.go  controller.go  controllerImpl.go  controller_i_test.go  controller_test.go  extensionController.go  extensionController_test.go  extensionController_unit_test.go  mocks.go  transactionController.go  transactionController_test.go  transactionController_unit_test.go
generatedApiDocs/: docs.go  swagger.json  swagger.yaml
integrationTesting/: dbTestSetup.go  integrationTestSuite.go  luaScriptFixture.go  (+2 more)
pkg/extensionController/bfs/udf/: list_files_udf.py  list_files_udf_test.py  pyproject.toml
(+353 files in other folders)
