[tool.poetry]
name = "list_files_udf"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
mypy = "^1.6.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
fail-under = 10

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 90
