[tool.poetry]
name = "list_files_udf"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
mypy = "^1.19.0"
pylint = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
fail-under = 10

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.coverage.run]
relative_files = true
source = ["."]

[tool.coverage.report]
fail_under = 90
